<resources>
    <string name="app_name">SeeBus</string>
    <string name="getStationByPos">http://ws.bus.go.kr/api/rest/stationinfo/getStationByPos?</string>
    <string name="serviceKey">serviceKey=DOXYaa9D5JuNL%2Bq5nNQz6k7zfejF8nQ%2BSRtJXfMZWeyzory0LmZQconDuzhLotGg5ptaYH8AemeIRDo36TfQ%2BQ%3D%3D</string>
    <string name="getStationByUid">http://ws.bus.go.kr/api/rest/stationinfo/getStationByUid?</string>
    <string name="getStaionByRoute">http://ws.bus.go.kr/api/rest/busRouteInfo/getStaionByRoute?</string>
    <string name="msg_token_fmt">InstanceID Token: %s</string>
    <string name="android_id">AndroidID: %s</string>
    <string name="server_address">http://3.35.208.56/</string>
    <string name="historyButtonTitle">최근 기록</string>
    <string name="startingPointButtonTitle">출발지 선택</string>
    <string name="favoriteButtonTitle">즐겨찾기</string>
    <string name="tv_introductionTitle">경로 안내 중</string>
    <string name="sendGpsNextStationTitle">다음 정류장 :</string>
    <string name="bt_quitSendGpsInfoTitle">안내 종료</string>
    <string name="sendGpsRemainingStaionCountTitle">남은정거장 개수 :</string>
    <string name="helpStartingPointButtonTitle">출발지 선택 도움말</string>
    <string name="helpGuideButtonTitle">경로안내 도움말</string>
    <string name="helpHistoryButtonTitle">최근 기록 도움말</string>
    <string name="helpFavoriteButtonTitle">즐겨찾기 도움말</string>
    <string name="helpSelectStart">
        1. 출발지 선택 메뉴에서는 현재 위치를 기반으로 주변 정류장 10개가 리스트로 출력됩니다. 각 정류장마다 정류장 이름, 정류장까지의 거리, 정류장 번호, 다음 정류장 정보를 확인할 수 있습니다. 출발 정류장을 선택하면 버스 선택 메뉴로 넘어갑니다.\n\n
        2. 탑승할 버스 선택 메뉴에서는 선택한 출발 정류장에 정차하는 버스들이 리스트로 출력됩니다. 각 버스마다 버스 번호, 다음 정류장, 종점, 버스 도착 예정 시간 정보를 확인할 수 있습니다. 탑승할 버스를 선택하면 도착 정류장 선택 메뉴로 넘어갑니다.\n\n
        3. 도착 정류장 선택 메뉴에서는 선택한 버스가 지나는 정류장이 리스트로 출력됩니다. 리스트의 가장 위에는 선택한 버스 정보가 존재합니다. 각 정류장마다 정류장 이름, 정류장 번호를 확인할 수 있습니다. 도착 정류장을 선택하면 목적지 확인 메뉴로 넘어갑니다.\n\n
        4. 목적지 확인 메뉴에서는 선택한 출발 정류장, 도착 정류장, 탑승 버스 정보를 최종적으로 확인할 수 있습니다. “취소” 버튼을 누르면 도착 정류장 선택 메뉴로 돌아가고, “확인” 버튼을 누르면 경로 안내 메뉴로 넘어갑니다.\n\n
        5. 경로 안내 메뉴는 도움말의 “경로 안내” 메뉴에 자세히 설명되어 있습니다.
    </string>
    <string name="helpGuide">
        1. 경로 안내 메뉴에 넘어오면 선택한 버스가 몇 분 후에 오는지에 대한 푸쉬알림이 오고, 탑승할 버스에 자동으로 승차벨을 울려줍니다.\n\n
        2. 경로 안내 메뉴에서는 “경로 안내 중”이라는 문구와 함께 다음 정거장과 도착 정거장까지 남은 정거장 개수가 출력됩니다. 해당 정보는 정거장 1개를 지날 때마다 업데이트 돼서 출력됩니다.\n\n
        3. 도착 정거장까지 세 정거장이 남았을 때부터 몇 정거장 전인지에 대한 푸쉬알림이 옵니다.\n\n
        4. 도착 정거장이 100m 남았을 때 곧 도착한다는 푸쉬알림이 오고, 탑승한 버스에 자동으로 하차벨을 울려줍니다.\n\n
        5. 도착 정거장에 도착하면 경로 안내 메뉴가 종료되며 홈화면으로 넘어갑니다.\n\n
        6. 경로 안내 메뉴의 “안내 종료” 버튼을 누르면 도착 정거장에 도착하지 않아도 경로 안내를 종료하며 홈화면으로 넘어갑니다.
    </string>
    <string name="helpHistory">
        1. 최근 기록 메뉴에서는 최근에 이용한 경로 5개가 리스트로 출력됩니다. 각 경로마다 버스 번호, 출발 정류장, 도착 정류장 정보를 확인할 수 있습니다. 경로를 선택하면 “안내 시작”, “즐겨찾기에 추가”, “뒤로가기” 순서로 버튼이 화면에 나옵니다.\n\n
        2. 경로를 선택 후 “안내 시작” 버튼을 누르면 경로 안내 메뉴로 넘어갑니다. 경로 안내 메뉴는 도움말의 “경로 안내” 메뉴에 자세히 설명되어 있습니다.\n\n
        3. 경로를 선택 후 “즐겨찾기에 추가” 버튼을 누르면 해당 경로가 즐겨찾기 메뉴에 추가됩니다. 즐겨찾기에 추가된 경로는 최근기록에서 자동으로 삭제됩니다. 즐겨찾기 메뉴는 도움말의 “즐겨찾기” 메뉴에 자세히 설명되어 있습니다.\n\n
        4. 경로를 선택 후 “뒤로가기” 버튼을 누르면 최근 기록 메뉴로 돌아갑니다.
    </string>
    <string name="helpFavorite">
        1. 즐겨찾기 메뉴에서는 즐겨찾기로 추가한 경로가 리스트로 출력됩니다. 각 경로마다  버스 번호, 출발 정류장, 도착 정류장 정보를 확인할 수 있습니다. 경로를 선택하면 “안내 시작”, “삭제하기”, “뒤로가기” 순서로 버튼이 화면에 나옵니다.\n\n
        2. 경로를 선택 후 “안내 시작” 버튼을 누르면 경로 안내 메뉴로 넘어갑니다. 경로 안내 메뉴는 도움말의 “경로 안내” 메뉴에 자세히 설명되어 있습니다.\n\n
        3. 경로를 선택 후 “삭제하기” 버튼을 누르면 해당 경로가 즐겨찾기 메뉴에서 삭제됩니다.\n\n
        4. 경로를 선택 후 “뒤로가기” 버튼을 누르면 즐겨찾기 메뉴로 돌아갑니다.
    </string>
</resources>